--- a/test flask/templates/inserttable.html
+++ b/test flask/templates/inserttable.html
@@ -12,7 +12,7 @@
             <input type="text" name = nome><br>
             <label>Quantità:</label>
             <input type="text" name = quant><br>
-            <input type="submit">
+            <input type="submit" value="AGGIUNGI">
         </form>
     </body>
 
