--- a/test flask/templates/inserttable.html
+++ b/test flask/templates/inserttable.html
@@ -11,7 +11,7 @@
             <label>Nome:</label>
             <input type="text" name = nome><br>
             <label>Quantità:</label>
-            <input type="text" name = quant><br>
+            <input type="number" name = quant><br>
             <input type="submit" value="AGGIUNGI">
         </form>
     </body>
