--- a/test flask/templates/login.html
+++ b/test flask/templates/login.html
@@ -7,6 +7,7 @@
         
         <h1>LOGIN</h1>
         <a href="/">Torna alla home</a>.
+        <a href="/registrati">Registrati</a>.
         <form action="/exec-login" method="POST">
             <label>Username:</label>
             <input type="text" name = username><br>
