--- a/test flask/templates/inserttable.html
+++ b/test flask/templates/inserttable.html
@@ -1,19 +1,12 @@
-<html>
-    <head>
-        <meta charset ="utf -8">
-        <title>{{titolo}}</title>
-    </head>
-    <body>
-        
+{% extends "Topbar.html" %}
+{% block body %}
         <h1>inserisci tabella</h1>
         <a href="/">Torna alla home</a>.
         <form action="/addrow" method="POST">
             <label>Nome:</label>
-            <input type="text" name = nome><br>
+            <input type="text" name = nome required><br>
             <label>Quantità:</label>
-            <input type="number" name = quant><br>
+            <input type="number" name = quant required><br>
             <input type="submit" value="AGGIUNGI">
         </form>
-    </body>
-
-</html>
+{% endblock %}
