--- a/test flask/templates/intro.html
+++ b/test flask/templates/intro.html
@@ -1,26 +1,7 @@
-<html>
-    <head>
-        <meta charset ="utf -8">
-        <title>{{titolo}}</title>
-        <script>
-            function elimina(id){
-              var txt;
-              var r = confirm("Do you really want to delete?");
-              if (r == true) {
-                window.location = '/delete?id=' + id;
-              }              
-            }
-            </script>
-    </head>
-    <body{%if alert != ''%} onload="alert(' {{alert}} ')"{%endif%}>
-        
-        <h1 >{{titolo}}</h1>
+{% extends "Topbar.html" %}
+{% block body %}
         <a href="/inserttable">Inserisci una nuova entry!</a>
-        {%if usrtype == 0%}
-        <a href="/login">LOGIN</a>
-        {%else%}
-        <a href="/logout">LOGOUT</a>
-        {%endif%}
+
         <!-- <div>{{alert}}</div> -->
         <table>
             <thead>
@@ -42,6 +23,4 @@
                     {%endfor%}
             </tbody>
         </table>
-    </body>
-
-</html>
+        {% endblock %}
