--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,6 +4,9 @@
         <meta charset ="utf -8">
         <title>{% block title %}{% endblock %}</title>
         <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+        <link href="https://fonts.googleapis.com/css?family=Crimson+Text|Noto+Sans+SC|Sacramento|Special+Elite&display=swap" rel="stylesheet">
+        <link href="https://unpkg.com/ionicons@4.5.10-1/dist/css/ionicons.min.css" rel="stylesheet">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         {% block head %}{% endblock %}
     </head>
     <body {% with messages = get_flashed_messages() %}
@@ -15,12 +18,14 @@
             "
         {% endif %}
     {% endwith %}>
-    <div id="topbar">
-        <!-- logo e altro -->
+    <div class="main">
+        <div id="topbar"><a href="/">Librochiocciola</a> 
+            <!-- logo e altro -->
+        </div>
+        <div id="menu">{% block menu %}{% endblock %}</div>
+            {% block body %}{% endblock %}
+        <div id = "bottom">by Daniele e Andrea</div>
     </div>
-    <div id="menu"> questo è un menu: {% block menu %}{% endblock %}</div>
-        {% block body %}{% endblock %}
-    <div id = "bottom">by Daniele e Andrea</div>
     </body>
 
 </html>
