--- a/templates/main.html
+++ b/templates/main.html
@@ -1,11 +1,17 @@
 {% extends "layout.html" %}
 {% block title %}Librochiocciola{% endblock %}
 {% block menu %}
+{%if session['usertype'] == 1%}
+{% include '/buttons/visprofilo.html' %}
+{%else%}
 {% include '/buttons/getordine.html' %}
+{%endif%}
 {% include '/buttons/carrello.html' %}
 {% include '/buttons/loginout.html' %}
+
 {% endblock %}
 {% block body %}
 <h2> è il main con tutte le categorie</h2>
 {{session['usertype']}}
+{{session['username']}}
 {% endblock %}
