Add dashboard and admin login

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -22,7 +22,7 @@
         <div id="topbar"><a href="/">Librochiocciola</a> 
             <!-- logo e altro -->
         </div>
-        <div id="menu">{% block menu %}{% endblock %}</div>
+        <div id="menu" class="width100">{% block menu %}{% endblock %}</div>
         {% block body %}{% endblock %}
     </div>
     <div id = "bottom">by Daniele e Andrea</div>
