--- a/templates/buttons/getordine.html
+++ b/templates/buttons/getordine.html
@@ -3,7 +3,7 @@
     function getordine(){
         var r = prompt("Inserisci il codice dell'ordine",'');
         if (r !=null) {
-            window.location = '/getordine?id=' + r;
+            window.location = '/getordine/' + r;
         }              
     }
 </script>
