--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,6 +1,8 @@
 {% extends "layout.html" %}
 {% block title %}Dashboard{% endblock %}
 {% block menu %}
+{% include '/buttons/insertbook.html' %}
+{% include '/buttons/gestgeneri.html' %}
 {% include '/buttons/loginout.html' %}
 {% endblock %}
 {% block body %}
