--- a/templates/login.html
+++ b/templates/login.html
@@ -8,6 +8,6 @@
     <input type="text" placeholder="Email" name="account" required class="formtextinput">
     <input type="password" placeholder="Password" name="psw" required class="formtextinput">
     <input type="submit" value="LOGIN" class="menubutton width100">
-    <p class="center">Non sei registrato? <a href="/registrati" class="link">Crea un account</a></p>
+    <p class="bottom_msg center">Non sei registrato? <a href="/registrati" class="link">Crea un account</a></p>
 </form>
 {% endblock %}
