Start implementation  of addbook

--- a/templates/buttons/insertbook.html
+++ b/templates/buttons/insertbook.html
@@ -1,1 +1,1 @@
-<a href="/insertbook"><i class="icon ion-md-book"></i>Aggiungi libro</a>
+<a href="/insalterbook/"><i class="icon ion-md-book"></i>Aggiungi libro</a>
