--- a/templates/insalterbook.html
+++ b/templates/insalterbook.html
@@ -37,9 +37,9 @@ Modifica libro {{libro['titolo']}}
     <label>Descrizione:</label>
     <textarea name="descr"   class="formtextinput">{{libro['descr']}}</textarea>
 
-    <label>Data pubblicazione:{{libro['datapubb']}}</label>
-    <input type="date" name="datapubb" required class="formtextinput" value="{{libro['datapubb']}}">
-    {{libro['datapubb']}}
+    <label>Data pubblicazione:{{libro['datapub']}}</label>
+    <input type="date" name="datapub" required class="formtextinput" value="{{libro['datapub']}}">
+    
 
     <label>Prezzo:</label>
     <input type="number" min="0" step="0.01" name="prezzo" required   class="formtextinput" value="{{libro['prezzo']}}">
