--- a/templates/buttons/getordine.html
+++ b/templates/buttons/getordine.html
@@ -1,9 +1,8 @@
-<button onclick="getordine()"><i class="icon ion-md-cube"></i>Apri ordine</button>
-<script>
+<button onclick="getordine()"><i class="icon ion-md-cube"></i>Apri ordine</button><script>
     function getordine(){
         var r = prompt("Inserisci il codice dell'ordine",'');
         if (r !=null) {
             window.location = '/getordine/' + r;
-        }              
+        }
     }
 </script>
