--- a/templates/insalterbook.html
+++ b/templates/insalterbook.html
@@ -11,9 +11,15 @@ Inserisci libro
 {% block body %}
 <h2>{%if libro['isbn'] %}Modifica di {{libro['titolo']}}{%else%}Creazione nuovo libro{%endif%}</h2>
 <form action="{%if libro['isbn'] %}/modlibro{%else%}/addlibro{%endif%}"
- method="POST" class="form">
+ method="POST" class="form" enctype=multipart/form-data>
     <label>ISBN:</label>
-    <input type="text" maxlength="13" placeholder="ISBN" name="isbn" required  class="formtextinput" {%if libro['isbn'] %}disabled{%endif%} value="{{libro['isbn']}}">
+    {%if libro['isbn'] %}
+    <input type="text" maxlength="13" placeholder="ISBN"  class="formtextinput" disabled value="{{libro['isbn']}}">
+    <input type="hidden" name="isbn" value="{{libro['isbn']}}">
+    {%else%}
+    <input type="text" maxlength="13" placeholder="ISBN" name="isbn" required  class="formtextinput">
+    {%endif%}
+    
 
     <label>Titolo:</label>
     <input type="text"  placeholder="Titolo" name="titolo" required  class="formtextinput" value="{{libro['titolo']}}">
@@ -44,8 +50,8 @@ Inserisci libro
     <label>Posizione in classifica:</label>
     <input type="number" min="1" max="11" name="posclas" required   class="formtextinput" value="{%if libro['posclas']%}{{libro['posclas']}}{%else%}11{%endif%}">
 
-    <label>Descrizione:</label>
-    <textarea name="descr"   class="formtextinput">{%if libro['descr'] %}{{libro['descr']}}{%endif%}</textarea>
+    <label>Descrizione:</label><br>
+    <textarea name="descr"  rows="10" class="formtextinput">{%if libro['descr'] %}{{libro['descr']}}{%endif%}</textarea><br>
 
     <label>Data pubblicazione:</label>
     <input type="date" name="datapub" required class="formtextinput" value="{{libro['datapub']}}">
@@ -58,13 +64,19 @@ Inserisci libro
     <input type="number" min="0" name="punti" required   class="formtextinput" value="{{libro['punti']}}">
 
 
-    <label>Immagine:</label>
-    <input type="text" name="immagine"   class="formtextinput" value="{%if libro['immagine'] %}{{libro['immagine']}}{%endif%}">
+    <label>Immagine:</label><br>
+    {%if libro['isbn']%}
+    {%if libro['immagine'] %}
+    <img class="copertina" src="{{url_for('static', filename='copertine/'+libro['immagine'])}}" class="copertina"/>
+    {%endif%}
+    <input type="hidden" name="oldimmagine" value="{{libro['immagine']}}">
+    {%endif%}
+    <input type=file name="immagine"><br>
 
     <label>Quantità:</label>
     <input type="number" min="0" name="quant" required   class="formtextinput" value="{{libro['quant']}}">
 
-    {%if libro['isbn']%}<input type="hidden" name="oldpos" value="{{libro['posclas']}}">{%endif%}
-    <input type="submit" value="Salva" class="menubutton">
+    {%if libro['isbn']%}<input type="hidden" name="oldposclas" value="{{libro['posclas']}}">{%endif%}
+    <input type="submit" value="Salva" class="menubutton"> <input type="reset" value="Reset" class="menubutton"/>
 </form>
 {% endblock %}
