changed table names

--- a/templates/addgenere.html
+++ b/templates/addgenere.html
@@ -7,9 +7,9 @@
 {% block body %}
 <form action="/execaddgenere" method="POST" class="form" enctype=multipart/form-data>
     <label>Nome:</label>
-    <input type="text" placeholder="Nome" name="nome" required class="formtextinput">
+    <input type="text" placeholder="Nome" name="nomegenere" required class="formtextinput">
     <label>Immagine:</label><br>
-    <input type=file name="immagine"><br>
+    <input type=file name="immaginegenere"><br>
     <input type="submit" value="Salva" class="menubutton">
 </form>
 {% endblock %}
