--- a/templates/gestgeneri.html
+++ b/templates/gestgeneri.html
@@ -9,7 +9,7 @@
 <h2>Lista generi</h2>
 <ul>
 {%for genere in generi%}
-<li><span>{{genere.nome}}</span><a href="/modgenere/{{genere.idgenere}}">Modifica</a></li>
+<li><span>{{genere.nomegenere}}</span><a href="/modgenere/{{genere.idgenere}}">Modifica</a></li>
 {%endfor%}
 </ul>
 {% endblock %}
